<resources>
    <string name="app_name">Rider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hong Gildong</string>
    <string name="nav_header_subtitle">gildong@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_bike">Bike</string>
    <string name="menu_location">Location</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_friend">Friend</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_ranking">Ranking</string>

    <string name="home_second">Home Second</string>
</resources>
