<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/speed"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_bike"
            android:icon="@drawable/ic_directions_bike_black_24dp"
            android:title="@string/menu_bike" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_friend" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/trophy"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_setting" />
    </group>
</menu>
