<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rider.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.rider.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.rider.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.example.rider.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_calender"
        android:name="com.example.rider.ui.calender.CalenderFragment"
        android:label="@string/menu_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/nav_bike"
        android:name="com.example.rider.ui.bike.BikeFragment"
        android:label="@string/menu_bike"
        tools:layout="@layout/fragment_bike" />

    <fragment
        android:id="@+id/nav_friend"
        android:name="com.example.rider.ui.friend.FriendFragment"
        android:label="@string/menu_friend"
        tools:layout="@layout/fragment_friend" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="com.example.rider.ui.ranking.RankingFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.rider.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>